# pesticides_EU

./: .gitignore  ActiveSubstanceExport_03-04-2026.xlsx  README.md  pesticides_API.ipynb  pesticides_smiles.csv  pyproject.toml  substances_matched.csv  substances_unmatched.csv
